--- a/index.html
+++ b/index.html
@@ -509,8 +509,8 @@
                   	<div class="col-md-offset-2 col-md-8 text-center">
                        	<div class="section-title animation fadeInUp">
         <div id="my_modal">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita dolore eveniet laborum repellat sit distinctio, ipsa rem dicta alias velit? Repellat doloribus mollitia dolorem
-            voluptatum ex reiciendis aut in incidunt?
+			신한은행&nbsp 110189272727 (예금주: 김영섭)<br>
+			우체국&nbsp 400101-02-035239 (예금주:김경민)
             <a class="modal_close_btn">닫기</a>
         </div>
 
