--- a/index.html
+++ b/index.html
@@ -509,8 +509,12 @@
                   	<div class="col-md-offset-2 col-md-8 text-center">
                        	<div class="section-title animation fadeInUp">
         <div id="my_modal">
-			신한은행&nbsp 110189272727 (예금주: 김영섭)<br>
-			우체국&nbsp 400101-02-035239 (예금주:김경민)
+			신한은행&nbsp 110-189-272727
+			<a id="copybtn2" onclick="copyToClipboard("110189272727");" title="계좌번호 복사">
+				<img src="./images/copylink.png" width=25 alt="">
+			</a>
+			<br>(예금주: 김영섭)<br><br>
+			우체국&nbsp 400101-02-035239 <br>(예금주:김경민)
             <a class="modal_close_btn">닫기</a>
         </div>
 
