--- a/index.html
+++ b/index.html
@@ -510,9 +510,7 @@
                        	<div class="section-title animation fadeInUp">
         <div id="my_modal">
 			신한은행&nbsp 110-189-272727
-			<a id="copybtn2" onclick="copyToClipboard("110189272727");" title="계좌번호 복사">
-				<img src="./images/copylink.png" width=25 alt="">
-			</a>
+			<button id="copybtn2" onclick="copyToClipboard('110189272727');">계좌번호 복사</button>
 			<br>(예금주: 김영섭)<br><br>
 			우체국&nbsp 400101-02-035239 <br>(예금주:김경민)
             <a class="modal_close_btn">닫기</a>
