--- a/index.html
+++ b/index.html
@@ -509,10 +509,12 @@
                   	<div class="col-md-offset-2 col-md-8 text-center">
                        	<div class="section-title animation fadeInUp">
         <div id="my_modal">
-			신한은행&nbsp 110-189-272727
-			<button id="copybtn2" onclick="copyToClipboard('110189272727');">계좌번호 복사</button>
+			신한은행<br>110-189-272727
+			<button id="copybtn2" onclick="copyToClipboard();">계좌번호 복사</button>
 			<br>(예금주: 김영섭)<br><br>
-			우체국&nbsp 400101-02-035239 <br>(예금주:김경민)
+			우체국<br>400101-02-035239 
+			<button id="copybtn3" onclick="copyToClipboard();">계좌번호 복사</button>
+			<br>(예금주:김경민)
             <a class="modal_close_btn">닫기</a>
         </div>
 
@@ -714,6 +716,14 @@
     $('#copybtn1').click(function() {
       copyToClipboard('https://invitation.ys-ys-wedding.site/');
       alert('주소를 복사하였습니다');
+    });
+    $('#copybtn2').click(function() {
+      copyToClipboard('110189272727');
+      alert('계좌번호를 복사하였습니다');
+    });
+    $('#copybtn3').click(function() {
+      copyToClipboard('40010102035239');
+      alert('계좌번호를 복사하였습니다');
     });
   </script>
 <script>
