--- a/index.html
+++ b/index.html
@@ -509,12 +509,12 @@
                   	<div class="col-md-offset-2 col-md-8 text-center">
                        	<div class="section-title animation fadeInUp">
         <div id="my_modal">
-			신한은행<br>110-189-272727
+			<p>신한은행<br>110-189-272727
 			<button id="copybtn2" onclick="copyToClipboard();">계좌번호 복사</button>
-			<br>(예금주: 김영섭)<br><br>
-			우체국<br>400101-02-035239 
+			<br>(예금주: 김영섭)</p>
+			<p>우체국<br>400101-02-035239 
 			<button id="copybtn3" onclick="copyToClipboard();">계좌번호 복사</button>
-			<br>(예금주:김경민)
+			<br>(예금주:김경민)</p>
             <a class="modal_close_btn">닫기</a>
         </div>
 
