--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
                 border: 1px solid #888;
                 border-radius: 3px;
             }
+            #my_modal .modal_contents{
+                position: absolute;
+                top: 10px;
+                right: 10px;
+            }
 
             #my_modal .modal_close_btn {
                 position: absolute;
@@ -494,7 +499,7 @@
 			    	   	<i class="de-icon-cab"></i>
 			    	</div>
 			    	<h3 class="inline SF-font">승용차</h3>
-			    	   	<li class="SF-font">서초IC에서 양재역 방면으로 나오신후<br> 양재지하차도로 진입하지 않고 양재역사거리에서 <br> 성남방향으로 우회전합니다. <br> 우회전후 60m 직진하시면 <br> 우측에 엘블레스가 있습니다.</li>
+			    	   	<li class="SF-font">서초IC에서 양재역 방면으로 나오신후<br> 양재지하차도로 진입하지 않고 <br>양재역사거리에서 성남방향으로 우회전합니다. <br> 우회전후 60m 직진하시면 <br> 우측에 엘블레스가 있습니다.</li>
 					</ul>
 				</div>
            </div>
