--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             #my_modal .modal_contents{
 				width:100%;
 				padding: 5px 5px;
+				white-space:nowrap; 
             }
             #my_modal .modal_close_btn {
                 position: absolute;
