--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
         <style>
             #my_modal {
                 display: none;
-                width: 300px;
-                padding: 20px 60px;
+                width: 320px;
+                padding: 15px 5px;
                 background-color: #fefefe;
                 border: 1px solid #888;
                 border-radius: 3px;
             }
             #my_modal .modal_contents{
 				width:100%;
-				padding: 5px 5px;
+				padding: 0 0;
 				white-space:nowrap; 
             }
             #my_modal .modal_close_btn {
