--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             #my_modal {
                 display: none;
                 width: 320px;
-                padding: 15px 5px;
+                padding: 15px 15px;
                 background-color: #fefefe;
                 border: 1px solid #888;
                 border-radius: 3px;
@@ -52,6 +52,10 @@
 				width:100%;
 				padding: 0 0;
 				white-space:nowrap; 
+            }
+            #my_modal .btnclass{
+                position: absolute;
+                right: 30px;
             }
             #my_modal .modal_close_btn {
                 position: absolute;
@@ -508,7 +512,7 @@
 			<p class="modal_contents">신한은행<br>110-189-272727<button id="copybtn2" onclick="copyToClipboard();">계좌번호 복사</button>
 			<br>(예금주: 김영섭)</p>
 			<p>우체국<br>
-			400101-02-035239<button id="copybtn3" onclick="copyToClipboard();">계좌번호 복사</button>
+			400101-02-035239<button id="copybtn3" class="btnclass" onclick="copyToClipboard();">계좌번호 복사</button>
 			<br>(예금주:김경민)</p>
             <a class="modal_close_btn">닫기</a>
         </div>
