--- a/index.html
+++ b/index.html
@@ -509,11 +509,13 @@
       </section>
 
         <div id="my_modal">
-			<p class="modal_contents">신한은행<br>110-189-272727<button id="copybtn2" onclick="copyToClipboard();">계좌번호 복사</button>
-			<br>(예금주: 김영섭)</p>
-			<p>우체국<br>
-			400101-02-035239<button id="copybtn3" class="btnclass" onclick="copyToClipboard();">계좌번호 복사</button>
-			<br>(예금주:김경민)</p>
+			<p class="modal_contents">신한은행&nbsp&nbsp110-189-272727<br>
+			(예금주: 김영섭)
+			<button id="copybtn2" class="btnclass" onclick="copyToClipboard();">계좌번호 복사</button>
+			</p>
+			<p>우체국&nbsp&nbsp&nbsp400101-02-035239<br>
+			(예금주:김경민)<button id="copybtn3" class="btnclass" onclick="copyToClipboard();">계좌번호 복사</button>
+			</p>
             <a class="modal_close_btn">닫기</a>
         </div>
       <!-- RSVP SECTION -->
