--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </style>
  </head>
         <style>
-            #my_modal {
+            #my_modal1 {
                 display: none;
                 width: 320px;
                 padding: 15px 15px;
@@ -48,22 +48,46 @@
                 border: 1px solid #888;
                 border-radius: 3px;
             }
-            #my_modal .modal_contents{
+            #my_modal1 .modal_contents{
 				width:100%;
 				padding: 0 0;
 				white-space:nowrap; 
             }
-            #my_modal .btnclass{
+            #my_modal1 .btnclass{
                 position: absolute;
                 right: 30px;
             }
-            #my_modal .modal_close_btn {
+            #my_modal1 .modal_close_btn {
                 position: absolute;
                 top: 10px;
                 right: 10px;
             }
         </style>
 
+        <style>
+            #my_modal2 {
+                display: none;
+                width: 320px;
+                padding: 15px 15px;
+                background-color: #fefefe;
+                border: 1px solid #888;
+                border-radius: 3px;
+            }
+            #my_modal2 .modal_contents{
+				width:100%;
+				padding: 0 0;
+				white-space:nowrap; 
+            }
+            #my_modal2 .btnclass{
+                position: absolute;
+                right: 30px;
+            }
+            #my_modal2 .modal_close_btn {
+                position: absolute;
+                top: 10px;
+                right: 10px;
+            }
+        </style>
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
@@ -507,14 +531,23 @@
 				</div>
            </div>
       </section>
-
-        <div id="my_modal">
+        <div id="my_modal1">
 			<p class="modal_contents">신한은행&nbsp&nbsp110-189-272727<br>
 			(예금주: 김영섭)
 			<button id="copybtn2" class="btnclass" onclick="copyToClipboard();">계좌번호 복사</button>
 			</p>
 			<p>우체국&nbsp&nbsp&nbsp400101-02-035239<br>
-			(예금주:김경민)<button id="copybtn3" class="btnclass" onclick="copyToClipboard();">계좌번호 복사</button>
+			(예금주: 김경민)<button id="copybtn3" class="btnclass" onclick="copyToClipboard();">계좌번호 복사</button>
+			</p>
+            <a class="modal_close_btn">닫기</a>
+        </div>
+        <div id="my_modal2">
+			<p class="modal_contents">기업은행&nbsp&nbsp327-064791-01-013<br>
+			(예금주: 정이슬)
+			<button id="copybtn4" class="btnclass" onclick="copyToClipboard();">계좌번호 복사</button>
+			</p>
+			<p>농협 &nbsp&nbsp&nbsp&nbsp&nbsp401030-52-015421<br>
+			(예금주: 정석훈)<button id="copybtn5" class="btnclass" onclick="copyToClipboard();">계좌번호 복사</button>
 			</p>
             <a class="modal_close_btn">닫기</a>
         </div>
@@ -705,11 +738,11 @@
 
             document.getElementById('popup_open_btn1').addEventListener('click', function() {
                 // 모달창 띄우기
-                modal('my_modal');
+                modal('my_modal1');
             });
             document.getElementById('popup_open_btn2').addEventListener('click', function() {
                 // 모달창 띄우기
-                modal('my_modal');
+                modal('my_modal2');
             });
         </script>
   <script>
@@ -732,6 +765,14 @@
     });
     $('#copybtn3').click(function() {
       copyToClipboard('40010102035239');
+      alert('계좌번호를 복사하였습니다');
+    });
+    $('#copybtn4').click(function() {
+      copyToClipboard('32706479101013');
+      alert('계좌번호를 복사하였습니다');
+    });
+    $('#copybtn5').click(function() {
+      copyToClipboard('40103052015421');
       alert('계좌번호를 복사하였습니다');
     });
   </script>
